--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	        <!-- Modal content from https://www.w3schools.com/bootstrap/bootstrap_modal.asp -->
+		<div class="modal">	
+			<div class="modal-content">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>  
+				<h4 class="modal-title">Congratulation!</h4>
+				<p>Oh no, You've missed a chance at real love yet again, but at least you won the game!</p>
+				<button id="playAgain"><span class="button-text">Play again</span></button>  
+			</div>
+		</div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
